spacing fix on rotating text

--- a/source/assets/stylesheets/components/_rotatingtext.scss
+++ b/source/assets/stylesheets/components/_rotatingtext.scss
@@ -5,7 +5,7 @@
   display: inline-block;
   vertical-align: top;
   content: "Creative";
-  width: 80px;
+  width: 90px;
 }
 
 /* Animation keyframes */
